trabajando el main

--- a/index.html
+++ b/index.html
@@ -31,6 +31,58 @@
             <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
 
         </div>
+    </header>    
+        <div class="contenedor contenido-principal">
+            <main class="blog">
+                <h3>Nuestro Blog</h3>
+
+                <article class="entrada">
+                    <div class="entrada__imagen">
+                        <img src="img/blog1.jpg" alt="imagen blog">
+                    </div>
+
+                    <div class="entrada__contenido">
+                        <h4 class="no-margin">Tipos de Granos de Cafe</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsa animi commodi, eius iusto numquam. Sequi ducimus quidem officia iste incidunt totam consequuntur vero aperiam? Sapiente neque illum laboriosam nostrum.
+                        Alias rerum quidem ex exercitationem expedita et itaque maxime, nisi libero minus modi non ab accusamus laboriosam dolores ducimus quae quibusdam porro quaerat. Ducimus necessitatibus ea ratione quia, ex sequi.
+                        Dolore laboriosam, minus dolorem omnis velit ratione beatae autem excepturi soluta nemo culpa quos atque asperiores ad eaque quo numquam sit enim sint cupiditate labore? Eius neque magni nostrum perferendis.</p>
+                        <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                    </div>
+                </article>
+
+                <article class="entrada">
+                    <div class="entrada__imagen">
+                        <img src="img/blog2.jpg" alt="imagen blog">
+                    </div>
+                    
+                    <div class="entrada__contenido">
+                        <h4 class="no-margin">3 Deliciosas recetas de Cafe</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsa animi commodi, eius iusto numquam. Sequi ducimus quidem officia iste incidunt totam consequuntur vero aperiam? Sapiente neque illum laboriosam nostrum.
+                        Alias rerum quidem ex exercitationem expedita et itaque maxime, nisi libero minus modi non ab accusamus laboriosam dolores ducimus quae quibusdam porro quaerat. Ducimus necessitatibus ea ratione quia, ex sequi.
+                        Dolore laboriosam, minus dolorem omnis velit ratione beatae autem excepturi soluta nemo culpa quos atque asperiores ad eaque quo numquam sit enim sint cupiditate labore? Eius neque magni nostrum perferendis.</p>
+                        <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                    </div>
+                </article>
+
+                <article class="entrada">
+                    <div class="entrada__imagen">
+                        <img src="img/blog3.jpg" alt="imagen blog">
+                    </div>
+                    
+                    <div class="entrada__contenido">
+                        <h4 class="no-margin">Beneficios del Cafe</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsa animi commodi, eius iusto numquam. Sequi ducimus quidem officia iste incidunt totam consequuntur vero aperiam? Sapiente neque illum laboriosam nostrum.
+                        Alias rerum quidem ex exercitationem expedita et itaque maxime, nisi libero minus modi non ab accusamus laboriosam dolores ducimus quae quibusdam porro quaerat. Ducimus necessitatibus ea ratione quia, ex sequi.
+                        Dolore laboriosam, minus dolorem omnis velit ratione beatae autem excepturi soluta nemo culpa quos atque asperiores ad eaque quo numquam sit enim sint cupiditate labore? Eius neque magni nostrum perferendis.</p>
+                        <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                    </div>
+                </article>
+            </main>
+            <aside>
+                <h3>Nuestros Cursos y Talleres</h3>
+            </aside>
+
+        </div>
 
     </header>
 </body>
