--- a/index.html
+++ b/index.html
@@ -80,9 +80,48 @@
             </main>
             <aside>
                 <h3>Nuestros Cursos y Talleres</h3>
+                <ul class="cursos no-padding">
+                    <li class="widget-curso">
+                        <h4 class="no-margin"> Tecnicas de Extraccion de Cafe</h4>
+                        <p class="widget-curso__label">Precio: 
+                            <span class="widget-curso__info">Gratis</span>
+                        </p>
+                        <p class="witget-curso__label">Cupo:
+                            <span class="witget-curso__info">20</span>
+                        </p>
+                        <a href="entrada.html" class="boton boton--segundario">Leer Entrada</a>
+                    </li>
+                    
+                    <li class="widget-curso">
+                        <h4 class="no-margin"> 4 Recetas de Cafe para Principiantes</h4>
+                        <p class="widget-curso__label">Precio: 
+                            <span class="widget-curso__info">Gratis</span>
+                        </p>
+                        <p class="witget-curso__label">Cupo:
+                            <span class="witget-curso__info">20</span>
+                        </p>
+                        <a href="entrada.html" class="boton boton--segundario">Leer Entrada</a>
+                    </li>
+                </ul>
             </aside>
 
         </div>
+        <footer class="footer">
+            <div class="contenedor">
+                <div class="barra">
+                    <a class="logo" href="index.html">
+                        <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafe</span></h1>
+                    </a>
+    
+                    <nav class="navegacion">
+                        <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                        <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                        <a href="contacto.html" class="navegacion__enlace">Contactos</a>
+                    </nav>
+                </div>
+            </div>
+
+        </footer>
 
     </header>
 </body>
