--- a/entrada.html
+++ b/entrada.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlogDeCafe</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Pagina web de blog de cafe">
+        <meta name="keywords" content="Cafe , blog , cursos ,"/>
+        <title>BlogDeCafe</title>
+        <!--Prefetch se utiliza para cargar una pagina que creamos que los usuarios visitaran mas, para que cargue mas rapido la pagina,google anality para ver en que pagina los usuarios pasan mas tiempo-->
+        <link rel="prefetch" href="nosotros.html" as="document">
+        <!--Preload son los elementos que crea necesario que carguen inmediatamente en mi pagina web ,esto mejora la performance-->
+        <link rel="preload" href="css/normalize.css" as="style">
+        <link rel="stylesheet" href="css/normalize.css">
+        
+        <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
+        crossorigin="crossorigin" as="font"><!--a las fuentes se le agrega el crossorigin="crossorigin" y en as="font"-->
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+        
+        <link rel="preload" href="css/style.css" as="style">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 <body>
     <header class="header">
         <div class="contenedor">
@@ -33,7 +42,7 @@
         </div>
     </header>
     <main class="contenedor">
-        <h3 class="centrar-texto">Sobre Nosotros</h3>
+        <h3 class="centrar-texto">Tecnicas de Extraccion de Cafe</h3>
 
         <img src="img/blog1.jpg" alt="imagen blog">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis laboriosam tempora dolore eligendi! Numquam sit eveniet, quisquam, quis iste modi tempora consequatur id ut atque voluptas totam molestiae nemo?
@@ -70,7 +79,6 @@
         </div>
 
     </footer>
-
-    </header>
+    <script src="js/modernizr.js"></script>
 </body>
 </html>
